--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">NoteKeeper-RealmSync</string>
     <string name="title">Note List</string>
+    <string name="server_client_id">536329512928-ttafp5vjmgjd9odh4j10gsnqpj1mcog8.apps.googleusercontent.com</string>
 </resources>
